--- a/www/views/adicionaGasto.html
+++ b/www/views/adicionaGasto.html
@@ -6,7 +6,7 @@
         <div class="form-group">
           <label for="exampleInputEmail1" class="col-xs-3 control-label">Data</label>
           <div class="col-xs-9">
-            <input type="date" class="form-control" ng-model="gasto.date" id="dateGasto" placeholder="Insira a data">
+            <input type="text" class="form-control" ng-model="gasto.date" id="dateGasto" placeholder="Insira a data">
           </div>
         </div>
         <div class="form-group">
