--- a/www/views/editaGasto.html
+++ b/www/views/editaGasto.html
@@ -1,4 +1,4 @@
-<div class="container" ng-init="getInit()">
+<div class="container" >
   <div class="col-xs-12">
     <h4>Adicionar Gasto</h4>
     <form class="form-horizontal">
